import base styling from parallax demo template. working content Container

--- a/Resources/Private/Sass/materialize-theme.scss
+++ b/Resources/Private/Sass/materialize-theme.scss
@@ -1,2 +1,12 @@
+
 @import "variables";
 @import "materialize";
+
+@import "layout";
+@import "icon";
+@import "navigation";
+@import "parallax";
+
+.button-collapse {
+  color: #26a69a;
+}
