--- a/Resources/Private/Templates/Page/Default.html
+++ b/Resources/Private/Templates/Page/Default.html
@@ -7,6 +7,9 @@
     <flux:form id="standard">
         <flux:grid>
             <flux:grid.row>
+                <flux:grid.column colPos="1" name="top"/>
+            </flux:grid.row>
+            <flux:grid.row>
                 <flux:grid.column colPos="0" name="main"/>
             </flux:grid.row>
             <flux:grid.row>
@@ -17,5 +20,13 @@
 </f:section>
 
 <f:section name="Main">
-    <v:content.render column="0"/>
+
+    <f:comment>first column without container</f:comment>
+    <v:content.render column="1"/>
+    <div class="section">
+        <div class="container">
+            <v:content.render column="0"/>
+        </div>
+    </div>
+
 </f:section>
