--- a/Resources/Private/Layouts/Page.html
+++ b/Resources/Private/Layouts/Page.html
@@ -1,5 +1,6 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
 <f:render partial="Header" arguments="{_all}"/>
 <f:render partial="Top" arguments="{_all}" />
+<f:render section="Main" partial="BreadCrumb" arguments="{_all}" />
 <f:render section="Main" />
 <f:render partial="Footer" arguments="{_all}" />
