add Breadcrumb layout

--- a/Resources/Private/Templates/Page/Default.html
+++ b/Resources/Private/Templates/Page/Default.html
@@ -6,7 +6,7 @@
 
 <f:section name="Configuration">
     <flux:form id="default" >
-        <f:render section="Configuration" partial="Rootline" arguments="{_all}" />
+        <f:render section="Configuration" partial="BreadCrumb" arguments="{_all}" />
     </flux:form>
     <flux:grid>
         <flux:grid.row>
