--- a/Resources/Private/Partials/Header/Logo.html
+++ b/Resources/Private/Partials/Header/Logo.html
@@ -1,4 +1,6 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers"
       xmlns:vhs="http://typo3.org/ns/FluidTYPO3/Vhs/ViewHelpers"
       data-namespace-typo3-fluid="true">
-<vhs:page.link id="logo-container" class="brand-logo" pageUid="{settings.homePageId}">Logo</vhs:page.link>
+<vhs:page.link id="logo-container" class="brand-logo" pageUid="{settings.homePageId}">
+    Logo
+</vhs:page.link>
