--- a/Resources/Private/Sass/materialize-theme.scss
+++ b/Resources/Private/Sass/materialize-theme.scss
@@ -3,10 +3,7 @@
 @import "materialize";
 
 @import "layout";
+@import "header";
 @import "icon";
 @import "navigation";
 @import "parallax";
-
-.button-collapse {
-  color: #26a69a;
-}
